* Simple fix for too short search field in main functions when using mobile devices

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-panel.scss
@@ -213,6 +213,11 @@
   flex-shrink: 1;
   margin: 0 0 0 10px;
 
+  // When this container is the first element it usually is the only element as in course picker and we don't want margins then
+  &:first-child {
+    margin: 0;
+  }
+
   @include breakpoint($breakpoint-pad) {
     margin: 0;
   }
