--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/form.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/form.scss
@@ -249,6 +249,8 @@ legend {
 .form-element--add-producer,
 .form-element--search {
   @include form-element-toolbar;
+
+  justify-content: flex-end;
 }
 
 .form-element--search {
@@ -455,9 +457,17 @@ legend {
 .form-element__input--add-producer,
 .form-element__input--add-material-producer {
   background-color: $color-default;
-  border: 2px solid $color-main-function-input-field-border;
-  margin-right: -2px; // Hides the right border and border-radius effect to provide more unified look
+  border-bottom: 2px solid $color-main-function-input-field-border;
+  border-left: 2px solid $color-main-function-input-field-border;
+  border-right: 2px solid $color-main-function-input-field-decoration-background;
+  border-top: 2px solid $color-main-function-input-field-border;
   width: 100%;
+
+  &:focus {
+    position: fixed;
+    right: 46px;
+    width: calc(100% - 56px);
+  }
 }
 
 // TEXTFIELD DECORATION
